--- a/public/style.css
+++ b/public/style.css
@@ -1,2 +1,32 @@
 body {
-  color: red; }
+  line-height: 1.5;
+  background: #d7d7ff; }
+
+.container {
+  position: relative;
+  width: 600px;
+  height: 400px;
+  margin: 0 auto; }
+
+.form {
+  font-size: 1rem; }
+
+.top {
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: #e7f1f9;
+  border-color: #D8D8D8;
+  border-style: solid;
+  height: 50%;
+  width: 100%; }
+
+.bottom {
+  position: absolute;
+  left: 0;
+  top: 52%;
+  background: #e7f1f9;
+  border-color: #D8D8D8;
+  border-style: solid;
+  height: 50%;
+  width: 100%; }
