--- a/public/style.css
+++ b/public/style.css
@@ -11,14 +11,23 @@ body {
 .form {
   font-size: 1rem; }
 
+.banner {
+  position: asbsolute;
+  left: 0;
+  top: 0;
+  height: 25%;
+  width: 100%;
+  font-size: 3em;
+  text-align: center; }
+
 .top {
   position: absolute;
   left: 0;
-  top: 0;
+  top: % 50;
   background: #e7f1f9;
   border-color: #D8D8D8;
   border-style: solid;
-  height: 50%;
+  height: 25%;
   width: 100%; }
 
 .bottom {
@@ -28,5 +37,20 @@ body {
   background: #e7f1f9;
   border-color: #D8D8D8;
   border-style: solid;
-  height: 50%;
+  height: 25%;
   width: 100%; }
+
+.inner {
+  position: absolute;
+  left: 25%;
+  top: 50%;
+  height: 25%;
+  width: 50%; }
+
+.copyLink-left {
+  position: absolute;
+  left: 0; }
+
+.copyLink-right {
+  position: absolute;
+  right: 0; }
