--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,17 +18,24 @@ body
   width: 600px
   height: 400px
   margin: 0 auto
-
 .form
   font-size: 1rem
+.banner
+  position: asbsolute
+  left: 0
+  top: 0
+  height: 25%
+  width: 100%
+  font-size: 3em
+  text-align: center
 .top
   position: absolute
   left: 0
-  top: 0
+  top: %50
   background: $light-gray
   border-color: $mid-gray
   border-style: solid
-  height: 50%
+  height: 25%
   width: 100%
 .bottom
   position: absolute
@@ -37,5 +44,17 @@ body
   background: $light-gray
   border-color: $mid-gray
   border-style: solid
-  height: 50%
+  height: 25%
   width: 100%
+.inner
+  position: absolute
+  left: 25%
+  top: 50%
+  height: 25%
+  width: 50%
+.copyLink-left
+  position: absolute
+  left: 0
+.copyLink-right
+  position: absolute
+  right: 0
